<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.myapplication.ui.Home.HomeFragment"
        android:label="@string/menu_Home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.myapplication.ui.pomodoro.PomodoroFragment"
        android:label="@string/menu_Pomodoro"
        tools:layout="@layout/fragment_pomodoro" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.myapplication.ui.Flowtime.FlowtimeFragment"
        android:label="@string/menu_Flowtime"
        tools:layout="@layout/fragment_flowtime" />

    <fragment
        android:id="@+id/nav_custom"
        android:name="com.example.myapplication.ui.Custom.CustomFragment"
        android:label="@string/menu_Custom"
        tools:layout="@layout/fragment_custom" />
</navigation>