<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Flowtime.FlowtimeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linLayout">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="50sp"
            android:orientation="vertical">

            <Button
                android:id="@+id/startChronometer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:text="@string/startButton" />

            <Button
                android:id="@+id/resetChronometer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:text="@string/resetButton"
                app:layout_constraintStart_toStartOf="parent" />
        </LinearLayout>

        <Chronometer
            android:id="@+id/chronometer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40sp"
            android:layout_marginTop="18sp"
            android:layout_marginBottom="18sp"
            android:background="@drawable/colorgrad"
            android:text="25:00"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="62sp" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollBar"
        android:layout_width="300sp"
        android:layout_height="450sp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="56dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="90dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linLayout"
        tools:ignore="SpeakableTextPresentCheck">

        <LinearLayout
            android:id="@+id/flowtimeContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="15sp"
        android:layout_marginRight="25sp"
        android:layout_marginBottom="16dp"
        android:text="@string/addButton" />

    <EditText
        android:id="@+id/nameEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="15sp"
        android:layout_marginBottom="16dp"
        android:layout_toRightOf="@id/addButton"
        android:hint="Start length"
        android:textSize="20dp" />
</RelativeLayout>