<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Home.HomeFragment">

    <TextView
        android:id="@+id/text_score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="Score: 372 minutes"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.03" />


    <LinearLayout
        android:id="@+id/studiedLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/colorgrad"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toTopOf="@+id/scrollBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_score"
        app:layout_constraintVertical_bias="0.36">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            app:layout_constraintBottom_toTopOf="@+id/scrollBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_score">

            <TextView
                android:id="@+id/txtMostStudied"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="@string/txtMostStudied"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtMostSubject"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtMostSubject"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="22sp"
                android:textStyle="bold" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/scrollBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_score">

            <TextView
                android:id="@+id/txtLeastStudied"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/txtLeastStudied"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtLeastSubject"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtLeastSubject"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="22sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollBar"
        android:layout_width="300sp"
        android:layout_height="400sp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="56dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SpeakableTextPresentCheck">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:background="@drawable/border">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:text="Achievements"
                android:textColor="@color/black"
                android:textSize="26sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Study for 5 hours total"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:paddingEnd="15px"
                android:background="@drawable/greengrad"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Study for 10 hours total"
                android:textColor="@color/black"
                android:paddingEnd="15px"
                android:textSize="20sp"
                android:background="@drawable/greengrad"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Study for 20 hours total"
                android:textColor="@color/black"
                android:paddingEnd="15px"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Study for 40 hours total"
                android:textColor="@color/black"
                android:paddingEnd="15px"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Study for 2 hours straight"
                android:textColor="@color/black"
                android:paddingEnd="15px"
                android:textSize="20sp"
                android:background="@drawable/greengrad"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Study for 3 hours straight"
                android:textColor="@color/black"
                android:paddingEnd="15px"
                android:textSize="20sp" />



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Complete 2 custom tasks"
                android:textColor="@color/black"
                android:paddingEnd="15px"
                android:textSize="20sp"
                android:background="@drawable/greengrad"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Complete 5 custom tasks"
                android:textColor="@color/black"
                android:paddingEnd="15px"
                android:textSize="20sp"
                android:background="@drawable/greengrad"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Complete 10 custom tasks"
                android:textColor="@color/black"
                android:paddingEnd="15px"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Complete 20 custom tasks"
                android:textColor="@color/black"
                android:paddingEnd="15px"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Complete 5 tasks in a day"
                android:textColor="@color/black"
                android:paddingEnd="15px"
                android:textSize="20sp"
                android:background="@drawable/greengrad"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Complete 15 tasks in a week"
                android:textColor="@color/black"
                android:paddingEnd="15px"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Complete 30 tasks in a week"
                android:textColor="@color/black"
                android:paddingEnd="15px"
                android:textSize="20sp" />





        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>